Updating the desktop file

--- a/share/applications/sanity.desktop
+++ b/share/applications/sanity.desktop
@@ -5,9 +5,9 @@ GenericName=Sanity's test
 GenericName[pt_BR]=Testes de Software
 Comment=
 Comment[pt_BR]=Acompanhe o que está em funcionamento no seu sistema
-Exec=
+Exec=/opt/sanity/notification.sh
 Icon=synapse
 Terminal=false
 Type=Application
-Categories=GNOME;System;Settings;
-StartupNotify=
+Categories=GNOME;System;
+StartupNotify=true
