Upcoming a new version

--- a/share/applications/sanity.desktop
+++ b/share/applications/sanity.desktop
@@ -5,8 +5,8 @@ GenericName=Sanity's test
 GenericName[pt_BR]=Testes de Software
 Comment=
 Comment[pt_BR]=Acompanhe o que está em funcionamento no seu sistema
-Exec=/opt/sanity/notification.sh
-Icon=synapse
+Exec=/opt/sanity/sanity
+Icon=/opt/sanity/share/icons/sanity32.png
 Terminal=false
 Type=Application
 Categories=GNOME;System;
